Created basic Blazor cart example

--- a/src/Blazor/Client/Pages/Index.razor
+++ b/src/Blazor/Client/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
+@using Blazor.Client.Components
 
-<h1>Hello, world!</h1>
+<h1>Shopping Cart Example</h1>
 
-Welcome to your new app.
+<h3>Products</h3>
+@* keeping it simple *@
+<ProductList />
 
-<SurveyPrompt Title="How is Blazor working for you?" />
