--- a/src/Blazor/Client/Shared/MainLayout.razor
+++ b/src/Blazor/Client/Shared/MainLayout.razor
@@ -6,7 +6,8 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <Blazor.Client.Components.CartStatus />
+       @* <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>*@
     </div>
 
     <div class="content px-4">
